--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.2.18"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
+//    implementation 'com.microsoft.services:outlook-services:2.1.0'
 //    implementation 'androidx.core:core:1.0.0'
 
 //    implementation 'com.android.support:appcompat-v7:34'
